# dep-audit

./: .gitignore  ReadMe.md  pyproject.toml
src/dep_audit/: __about__.py  __init__.py
